--- a/smartmeter-connection.html
+++ b/smartmeter-connection.html
@@ -61,12 +61,12 @@
 
     <div id="node-inputs-smartmeter-http">
         <div class="form-row">
-            <label for="node-config-input-httphost"><i class="fa fa-globe"></i> <span data-i18n="smartmeter-connection.label.host"></span></label>
-            <input type="text" id="node-config-input-httphost">
+            <label for="node-config-input-hostname"><i class="fa fa-globe"></i> <span data-i18n="smartmeter-connection.label.host"></span></label>
+            <input type="text" id="node-config-input-hostname">
         </div>
         <div class="form-row">
-            <label for="node-config-input-httpport"><i class="fa fa-random"></i> <span data-i18n="smartmeter-connection.label.port"></span></label>
-            <input type="text" id="node-config-input-httpport">
+            <label for="node-config-input-hostport"><i class="fa fa-random"></i> <span data-i18n="smartmeter-connection.label.port"></span></label>
+            <input type="text" id="node-config-input-hostport">
         </div>
     </div>
 
@@ -118,11 +118,11 @@
                 value: 1,
                 required: true
             },
-            httphost: {
+            hostname: {
                 value: '',
                 required: true
             },
-            httpport: {
+            hostport: {
                 value: 80,
                 required: true,
                 validate: RED.validators.number()
@@ -150,7 +150,7 @@
                 return this.serialport + ':' + this.serialbaud + '-' + this.databits + this.parity.charAt(0)
                     .toUpperCase() + this.stopbits;
             } else if (this.sourcetype === 'http') {
-                return 'http@' + this.httphost + ':' + this.httpport;
+                return 'http@' + this.hostname + ':' + this.hostport;
             } else if (this.sourcetype === 'tcp') {
                 return 'tcp@' + this.tcphost + ':' + this.tcpport;
             } else {
@@ -282,8 +282,8 @@
             this.serialbaud = $('#node-config-input-serialbaud').typedInput('value');
 
             if ($('#node-config-input-sourcetype').val() === "serial") {
-                $('#node-config-input-httphost').val('localhost');
-                $('#node-config-input-httpport').val('80');
+                $('#node-config-input-hostname').val('localhost');
+                $('#node-config-input-hostport').val('80');
                 $('#node-config-input-tcphost').val('localhost');
                 $('#node-config-input-tcpport').val('502');
                 $('#node-config-input-filepath').val('/dev/null');
@@ -294,13 +294,13 @@
                 $('#node-config-input-filepath').val('/dev/null');
             } else if ($('#node-config-input-sourcetype').val() === "tcp") {
                 $('#node-config-input-serialport').val('/dev/null');
-                $('#node-config-input-httphost').val('localhost');
-                $('#node-config-input-httpport').val('80');
+                $('#node-config-input-hostname').val('localhost');
+                $('#node-config-input-hostport').val('80');
                 $('#node-config-input-filepath').val('/dev/null');
             } else {
                 $('#node-config-input-serialport').val('/dev/null');
-                $('#node-config-input-httphost').val('localhost');
-                $('#node-config-input-httpport').val('80');
+                $('#node-config-input-hostname').val('localhost');
+                $('#node-config-input-hostport').val('80');
                 $('#node-config-input-tcphost').val('localhost');
                 $('#node-config-input-tcpport').val('502');
             }
